changed to AlmaItemData